--- a/src/main/resources/templates/form-login.html
+++ b/src/main/resources/templates/form-login.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<!DOCTYPE HTML>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
@@ -14,34 +16,34 @@
 
     <!-- Подключаем Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous" ></script>
-
-    <title>Student info</title>
+    <title><title>LogIn Page</title></title>
 </head>
+
 <body>
-<div th:replace="fragments/header.html :: header"/>
-<div class="container">
-    <h2>Student info</h2>
-    <table class="table table-bordered table-striped">
-        <thead class="thead-dark">
-        <tr>
-            <th>Lastname</th><th>Firstname</th><th>Email</th><th>Password</th>
-        </tr>
-        <tbody>
-        <tr>
-            <td th:text="${student.getLastName()}"/>
-            <td th:text="${student.getFirstName()}"/>
-            <td th:text="${student.getEmail()}"/>
-            <td th:text="${student.getPassword()}"/>
-        </tr>
-        </tbody>
-    </table>
-
-    <a th:href="@{/home}"
-       class="btn btn-info btn-sm">
-        Main page
-    </a>
-
-</div>
-
+    <div th:replace="fragments/header.html :: header"/>
+    <h2>LogIn Page</h2>
+    <div style="color: red" th:if="${param.error}">Invalid username and password.</div>
+    <div th:if="${param.logout}">You have been logged out.</div>
+    <form th:action="@{/login}" method="POST">
+        <table>
+            <tr>
+                <td>Username:</td>
+                <td>
+                    <input type="text" name="username" />
+                </td>
+            </tr>
+            <tr>
+                <td>Password:</td>
+                <td>
+                    <input type="password" name="password" />
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <input type="submit" value="LogIn" />
+                </td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
